--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,3 +1,14 @@
 body {
   background-color: #272a2f;
 }
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+button {
+  cursor: pointer;
+  background: transparent;
+  border: none;
+}
