--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -5,19 +5,38 @@
 }
 
 .navbar-wrapper {
-  width: 80%;
+  width: 95%;
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .navbar-form-wrapper {
-  width: 60%;
+  width: 100%;
+}
+
+.navbar-wrapper__title {
+  font-size: 20px;
+  color: #ffffff;
 }
 
 .navbar-form {
-  width: 400px;
+  width: 100%;
 }
 
 .form-inline .form-control .navbar-input {
   width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+  .navbar-wrapper {
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .navbar-form-wrapper {
+    width: 40%;
+  }
 }
