--- a/src/components/modal-info/modal-info.css
+++ b/src/components/modal-info/modal-info.css
@@ -5,28 +5,18 @@
 .modal-window__btn {
   position: fixed;
   z-index: 4;
-  top: 26%;
-  right: 30.5%;
-}
-
-.modal-window__opacity {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  top: 2px;
+  right: 2%;
+  color: #ffffff;
 }
 
 .modal-window__container {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
   z-index: 3;
-  width: 40%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,22 +25,98 @@
 
 .modal-window__header {
   width: 100%;
-  height: 50px;
+  min-height: 30px;
   background-color: #272a2f;
 }
 
+.modal-window__img-container {
+  display: none;
+}
+
 .modal-window__wrap {
-  width: 95%;
+  width: 90%;
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
 }
 
-.modal-window__img-container {
-  min-width: 35%;
-  height: 380px;
+.modal-window__title {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 5px;
 }
 
 .modal-window__items-info {
   display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 9px;
+}
+
+.modal-window__description {
+  font-style: italic;
+  margin-bottom: 5px;
+}
+
+.modal-window__items-info p {
+  font-weight: 500;
+  margin-right: 5px;
+}
+
+.modal-window__table tr {
+  border-top: 1px solid #000000;
+}
+
+.modal-window__table td {
+  border-right: 1px solid #000000;
+}
+
+.modal-window__table td:last-of-type {
+  border-right: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-window__opacity {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+
+  .modal-window__container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    width: 40%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+  }
+
+  .modal-window__btn {
+    top: 26%;
+    right: 30.5%;
+  }
+
+  .modal-window__header {
+    width: 100%;
+    height: 50px;
+    background-color: #272a2f;
+  }
+
+  .modal-window__wrap {
+    width: 95%;
+  }
+
+  .modal-window__img-container {
+    display: block;
+    min-width: 35%;
+    height: 380px;
+  }
 }
