--- a/src/components/modal-info/modal-info.css
+++ b/src/components/modal-info/modal-info.css
@@ -91,8 +91,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 3;
-    width: 40%;
-    height: 50%;
+    width: 720px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -100,8 +100,8 @@
   }
 
   .modal-window__btn {
-    top: 26%;
-    right: 30.5%;
+    top: 16.5%;
+    right: 21.5%;
   }
 
   .modal-window__header {
@@ -118,5 +118,14 @@
     display: block;
     min-width: 35%;
     height: 380px;
+    margin-bottom: 20px;
+  }
+
+  .modal-window__block-info {
+    margin-left: 20px;
+  }
+
+  .modal-window__table {
+    margin-bottom: 20px;
   }
 }
