--- a/src/components/modal-info/modal-info.css
+++ b/src/components/modal-info/modal-info.css
@@ -3,10 +3,7 @@
 }
 
 .modal-window__btn {
-  position: fixed;
-  z-index: 4;
-  top: 2px;
-  right: 2%;
+  margin-right: 15px;
   color: #ffffff;
 }
 
@@ -24,6 +21,8 @@
 }
 
 .modal-window__header {
+  display: flex;
+  justify-content: flex-end;
   width: 100%;
   min-height: 30px;
   background-color: #272a2f;
@@ -36,7 +35,6 @@
 .modal-window__wrap {
   width: 90%;
   display: flex;
-  justify-content: space-between;
   margin-top: 10px;
 }
 
