--- a/src/components/modal-info/modal-info.css
+++ b/src/components/modal-info/modal-info.css
@@ -120,6 +120,9 @@
   }
 
   .modal-window__block-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-left: 20px;
   }
 
