--- a/src/components/movies-list-card/movies-list-card.css
+++ b/src/components/movies-list-card/movies-list-card.css
@@ -12,3 +12,7 @@
   cursor: pointer;
   background-color: #000000;
 }
+
+.movies-list__card:hover {
+  box-shadow: 1px 1px 24px 0px rgba(255, 255, 255, 0.75);
+}
